Bug 1620101 - Changing over to using freedesktop.org window properties to implement support for virtual desktops. r=stransky

So when I simply set the property on the window and flushed the display, I didn't
manage to get the desired effect.
Then I found this 'gxtuner' project that sends an event, which is correctly
picked up by Gnome and hopefully others.

Differential Revision: https://phabricator.services.mozilla.com/D65650